@@ -3,7 +3,8 @@ import com.google.inject.Injector;
 import guice.MainModule;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 /**
  * Created by taihuynh on 9/7/16.
@@ -13,8 +14,10 @@ public class Main {
         Injector dlInjector = Guice.createInjector(new MainModule());
         HttpDownloader httpDownloader = dlInjector.getInstance(HttpDownloader.class);
         try {
-            httpDownloader.download(new URL("http://spatialkeydocs.s3.amazonaws.com/FL_insurance_sample.csv.zip"));
+            httpDownloader.download(new URI("http://spatialkeydocs.s3.amazonaws.com/FL_insurance_sample.csv.zip"));
         } catch (IOException e) {
+            e.printStackTrace();
+        } catch (URISyntaxException e) {
             e.printStackTrace();
         }
     }
